@@ -8,6 +8,7 @@ BeeBEEP 4.2.0
 - Added delay on first connection option
 - Option to send offline messages also in chat with all user
 - ShareBox is improved with remote folder creation
+- Image transferred can be also opened with a double click in preview
 
 BeeBEEP 4.0.0
 - Changed all the main user interface
